--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
     margin: 0px;
     background-color: blue;
     padding-right: 50px;
+    height: auto;
 }
 
 #headerUGB h1{
@@ -20,8 +21,8 @@ body{
 }
 
 #logoUGBimg{
-    height: auto;
     width: 200px;
+    height: 103.28px;
 }
 
 #listadoHeader{
@@ -35,15 +36,63 @@ body{
 
 }
 
+
+.MainDiv{
+    display: flex;
+    flex-direction: row;
+    padding-left: 30px;
+    padding-right: 30px;
+    gap: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+}
+
+.MainDiv img{
+    border-radius: 5px;
+}
+
+.rightMainDiv{
+    font-family: sans-serif;
+}
+
+.sectionRight{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 50px;
+    align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: 75px;
+    margin-right: 75px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+.sectionRight img{
+    border-radius: 10px;
+    height: 200px;
+    width: 300px;
+}
+
+
+
+
+
+
+
+
+
 #footerUGB{
     background-color: blue;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    margin-bottom: 0px;
 }
 
 #footerUGB ul{
@@ -52,3 +101,4 @@ body{
     text-align: center;
     
 }
+
