--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
-    background-color: lightblue;
+    background-color: #F2EFE7;
     margin: 0px;
+    font-family: sans-serif;
 }
 
 #headerUGB{
@@ -9,7 +10,7 @@ body{
     flex-direction: row;
     justify-content:space-between;
     margin: 0px;
-    background-color: blue;
+    background-color: #2973B2;
     padding-right: 50px;
     height: auto;
 }
@@ -43,7 +44,7 @@ body{
     padding-left: 30px;
     padding-right: 30px;
     gap: 20px;
-    margin-top: 15px;
+    margin-top: 35px;
     margin-bottom: 15px;
     justify-content: center;
     align-items: center;
@@ -52,10 +53,19 @@ body{
 
 .MainDiv img{
     border-radius: 5px;
+    border: solid black 3px;
 }
 
 .rightMainDiv{
     font-family: sans-serif;
+}
+
+#cuerpoDiv{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    margin-top: 75px;
+    margin-bottom: 75px;
 }
 
 .sectionRight{
@@ -63,32 +73,60 @@ body{
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 50px;
-    align-items: center;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-left: 75px;
-    margin-right: 75px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    align-items:center;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    justify-content: center;
+    border-left: 20%;
+    border-right: 20%;
+    background-color: #9ACBD0;
 
 }
 
 .sectionRight img{
     border-radius: 10px;
-    height: 200px;
-    width: 300px;
+    height: 190px;
+    width: 290px;
+    border: solid #2973B2 4px;
 }
 
 
 
+.sectionLeft{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 50px;
+    align-items:center;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    justify-content: center;
+    border-left: 20%;
+    border-right: 20%;
+    background-color:#48A6A7;
 
+
+
+}
+
+.sectionLeft img{
+    border-radius: 10px;
+    height: 190px;
+    width: 290px;
+    border: solid #2973B2 2px;
+
+}
 
 
 
 
 
 #footerUGB{
-    background-color: blue;
+    background-color: #2973B2;
     display: flex;
     align-items: center;
     justify-content: center;
